--- a/tetris.html
+++ b/tetris.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Tetris</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <script src="ogcompare.js"></script> -->
     <script src="tetrisbasic.js"></script>
 </head>
 <body>
